--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "clsx": "^2.1.1"
+    "clsx": "^2.1.1",
+    "express-session": "^1.18.2",
+    "socket.io": "^4.8.1"
   }
 }
